# shipWebsite

./: .gitignore  README.md  docker-compose.yml  package-lock.json  setup.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/admin/: __init__.py  admin_logic.py  views.py
backend/app/api/: routes.py
backend/app/database/: __init__.py  engine.py  models.py  schemas.py
backend/app/database/migrations/: env.py
backend/app/database/migrations/versions/: 8d3904d7b5eb_initial.py
backend/app/templates/sqladmin/: index.html
backend/app/utils/: init_admin.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: config.js
frontend/src/components/documentsGrid/: DocumentsGrid.jsx  DocumentsGrid.module.css
frontend/src/components/footer/: Footer.jsx  Footer.module.css
frontend/src/components/header/: Header.jsx  header.module.css
frontend/src/components/heroSlider/: HeroSlider.jsx  HeroSlider.module.css
frontend/src/components/worksGrid/: WorksGrid.jsx  WorksGrid.module.css
frontend/src/pages/: App.jsx  App.module.css
frontend/src/styles/: index.css
