[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "fastapi-storages>=0.3.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.0",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.0",
    "sqladmin[full]>=0.20.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
